[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/characters/Player/Player-Idle.png" type="Texture" id=1]
[ext_resource path="res://src/characters/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/characters/lizard_f/lizard_f_hit_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/Player/PlayerSimpleDodgeRoll.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/Player/playerRun.png" type="Texture" id=5]
[ext_resource path="res://src/projectiles/GlueBullet.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Audio/Glue Launch.wav" type="AudioStream" id=12]
[ext_resource path="res://src/GUI/HealthGUI.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/Audio/Losing Health Sound.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/Audio/DodgeRoll.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/Audio/PlayerPitfall.wav" type="AudioStream" id=16]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 24, 35 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 24, 0, 24, 35 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 24, 35 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 24, 35 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 72, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 168, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 24, 36 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 216, 0, 24, 36 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "dodge_roll",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=21]
radius = 18.4067
height = 10.8142

[sub_resource type="CapsuleShape2D" id=22]
radius = 21.5213
height = 9.47931

[sub_resource type="Animation" id=23]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 0.5, 0.5 ), Vector2( 0.25, 0.25 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "freeze_player"
}, {
"args": [  ],
"method": "unfreeze_player"
} ]
}

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 2.29297, 0.481319 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_mask = 5
script = ExtResource( 2 )
GlueBullet = ExtResource( 11 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.444957, 1.11238 )
scale = Vector2( 2, 2 )
frames = SubResource( 20 )
animation = "idle"

[node name="PlayerShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.0706227, 4.76858 )
shape = SubResource( 21 )

[node name="PlayerArea" type="Area2D" parent="."]

[node name="PlayerShape2" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( 0.0706227, 4.76858 )
shape = SubResource( 22 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( -0.396434, 9.2655 )

[node name="PlayerCam" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="GlueLaunch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 0.07

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="DodgeRollSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="PitfallSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="HealthLayer" type="CanvasLayer" parent="."]

[node name="HealthGUI" parent="HealthLayer" instance=ExtResource( 13 )]
visible = false
margin_right = 96.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pitfalled = SubResource( 23 )

[node name="FallingBox" type="Area2D" parent="."]
collision_layer = 2

[node name="Foot1" type="CollisionShape2D" parent="FallingBox"]
position = Vector2( 5.21485, 34.5378 )
shape = SubResource( 24 )

[node name="Foot2" type="CollisionShape2D" parent="FallingBox"]
position = Vector2( -9.657, 34.5145 )
shape = SubResource( 24 )

[node name="DodgeRollTween" type="Tween" parent="."]
[connection signal="area_entered" from="PlayerArea" to="." method="_on_PlayerArea_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_PlayerArea_area_exited"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_entered"]
[connection signal="body_exited" from="PlayerArea" to="." method="_on_PlayerArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
